<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".LoginActivity">

...
        android:inputType="textPassword"
        android:textColor="#e4e4e4"
        android:textSize="12sp"
        android:textStyle="normal"
        tools:ignore="HardcodedText" />
    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignStart="@id/passwordEditText"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
...
